# scripts

./: .Xresources  .bashrc  .ctags  .dir_colors  .gdbinit  .gitconfig  .gitignore  .gotty  .i3blocks.conf  .iredisrc  .kshrc  .mongorc.js  .mongoshrc.js  .muttrc  .nethackrc  .offlineimaprc  .psqlrc  .rainbow_config.json  .screenrc  .secrets.baseline  .tmux.conf  .trash  .tridactylrc  .tunneltop.toml  .tvrc  .vimrc  .vimshrc  .xonshrc  .xprofile  .ycm_extra_config.py  .zshenv  .zshrc  CV_Abridged.tex  README.md  _emacs.el  cfam.vimrc  checknodeversion.sh  crontab  default.sh  devi.zsh-theme  (+34 more)
.config/: .bombadillo.ini  redshift.conf
.gnupg/: dirmngr.conf
.k9s/: config.yml  skin.yml
.mutt/: .muttrc  .signature  account.gmail  account.self  account.zoho  mailcap
.newsboat/: config  urls
.proxychains/: proxychains.conf
.w3m/: build.sh  config  keymap
acpid/: handler.sh
baseline/: .minttyrc  .tmux.conf  .vimrc  .zshrc  startup.sh  ufw-allow-mosh
bbox/: .config
c/: Dockerfile  debug.dbg  header.hpp  main.c  main.cpp
chroot/: arch.sh  debian11.sh  make_devices.sh  make_jail.sh  mount.sh  steam_wrapper  ubuntu2204.sh  voidglibc.sh  voidmusl.sh  zoom_wrapper
compiler-explorer/: ceconfig.json  index.js  main.js  package.json
cv/: CV.tex  CV_Abridged.tex
cygwin/: .tmux.conf  .zshrc  _emacs.el  alac.bat  alacritty.yml  conemu.xml  devi.zsh-theme  pulseserver.bat  socks5.bat  xserver.bat
df/: colors.txt  df-init  init.txt  world_gen.txt
dnscrypt/: dnscrypt-proxy.toml
docker/: devdocs.bat  docker_builders.sh  (+9 more)
identicon/: gen_blockie.py  pyproject.toml
(+290 files in other folders)
